syntax = "proto3";
package pending_props_pb;

enum Status {
    PENDING = 0;
    REVOKED = 1;
    SETTLED = 2;
    ERROR = 3;
}

message Earning {
    EarningDetails details = 1;
    string signature = 2;
    string settled_by_transaction = 3;
}

message EarningDetails {
    int64 timestamp = 1;
    string amount_earned = 2; // big.Int
    string amount_settled = 3; // big.Int
    string user_id = 4;
    string application_id = 5;
    string description = 6;
    Status status = 7;
}

message Settlements {
    repeated string earning_addresses = 1;
}

message LastEthBlock {
    int64 id = 1;
    int64 timestamp = 2;
}

message Nonce {
    int64 current = 1;
}